--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
+directories = "5.0.1"
+serde = {version = "1.0.196", features = ["derive"]}
+toml = "0.8.10"
 
 [dev-dependencies]
 rstest = "0.18.2"
