--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ clap = { version = "4.4.18", features = ["derive"] }
 directories = "5.0.1"
 serde = {version = "1.0.196", features = ["derive"]}
 toml = "0.8.10"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 rstest = "0.18.2"
