--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,24 @@
 [package]
 name = "artifact_cleaner"
 version = "0.1.0"
+authors = ["Korbinian Schweiger <korbinian.schweiger@gmail.com>"]
+description = "A tool to search progamming language specific artifiacts and deletem them"
+readme = "README.md"
+repository = "https://github.com/kschweiger/artifact_cleaner"
 edition = "2021"
 license = "MIT"
+keywords = ["cli"]
+categories = ["command-line-utilities"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
 directories = "5.0.1"
-serde = {version = "1.0.196", features = ["derive"]}
+serde = { version = "1.0.196", features = ["derive"] }
 toml = "0.8.10"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
-rstest = "0.18.2"
 tempfile = "3"
